--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -112,6 +112,8 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/headerBlock/_headerBlock.scss';
 @import '../pug/blocks/sMainCategories/_sMainCategories.scss';
 @import '../pug/blocks/sHit/_sHit.scss';
+@import '../pug/blocks/sPopCategories/_sPopCategories.scss';
+@import '../pug/blocks/sAllCategories/_sAllCategories.scss';
 
 
 @import '../pug/blocks/header/_header.scss';
