--- a/sourse/pug/blocks/sHit/_sHit.scss
+++ b/sourse/pug/blocks/sHit/_sHit.scss
@@ -3,13 +3,12 @@
 		--sPT: calc(#{$grid-gutter-width} * 2);
 		--sPB: 0;
 		--sTPB: calc(#{$grid-gutter-width} * 2);
-	.section-title {
-		position: relative;
-		h2 {
-			padding-left: $grid-gutter-width;
-			border-left: 5px solid $red;
-		}
-	}
+	// .section-title {
+	// 	h2 {
+	// 		padding-left: $grid-gutter-width;
+	// 		border-left: 5px solid $red;
+	// 	}
+	// }
 	.hit-slider-button-prev {
 		margin-right: $grid-gutter-width;
 		.icon {
