--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -128,6 +128,10 @@ body {
 
 .section-title {
 	margin-bottom: var(--sTPB);
+	h2 {
+		padding-left: $grid-gutter-width;
+		border-left: 5px solid $red;
+	}
 }
 
 
