--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -77,3 +77,32 @@
 		}
 	}
 }
+
+.breadcrumb {
+	background-color: $white;
+	border: 1px solid $gray;
+	padding: rem(10);
+	margin-bottom: rem(20);
+	&-item {
+		a {
+			color: $gray-800;
+		}
+		& + & {
+			padding-left: rem(10);
+		}
+		& + &:before {
+			padding-right: rem(10);
+			font-weight: 700;
+		}
+	}
+}
+
+.page-head {
+	padding-top: rem(10);
+	padding-bottom: rem(20);
+	h1 {
+		color: $gray-800;
+		border-left: 5px solid $red;
+		padding-left: rem(10);
+	}
+}
