--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -75,6 +75,10 @@
 	font-size:math.div(20,10)*1rem;
 	width: math.div(19,20)*1em;
 }
+.icon-settings {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
 .icon-star {
 	font-size:math.div(16,10)*1rem;
 	width: math.div(15,16)*1em;
