--- a/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
+++ b/sourse/pug/blocks/sAllCategories/_sAllCategories.pug
@@ -27,5 +27,5 @@ mixin sAllCategories(data)
 						.swiper-slide
 							+allCategoriesItem('Сварочные аппараты')
 				.col-2
-					button Все категории
+					+e.show.BUTTON Все категории
 	// end sAllCategories
