--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -114,6 +114,9 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sHit/_sHit.scss';
 @import '../pug/blocks/sPopCategories/_sPopCategories.scss';
 @import '../pug/blocks/sAllCategories/_sAllCategories.scss';
+@import '../pug/blocks/sBlogPreview/_sBlogPreview.scss';
+@import '../pug/blocks/sBrands/_sBrands.scss';
+@import '../pug/blocks/sAbout/_sAbout.scss';
 
 
 @import '../pug/blocks/header/_header.scss';
