--- a/sourse/pug/blocks/sAbout/_sAbout.pug
+++ b/sourse/pug/blocks/sAbout/_sAbout.pug
@@ -5,24 +5,23 @@ mixin sAbout(data)
 			+b.section-title
 				h2 Магазин садовой техники Техносадов
 			p Работы на&nbsp;даче и&nbsp;приусадебном участке сложно представить без использования садовой техники и&nbsp;инвентаря. Специализированное оборудование необходимо коммунальщикам и&nbsp;специалистам по&nbsp;ландшафтному дизайну. С&nbsp;помощью механизированных средств и&nbsp;эргономичного инвентаря сложные задачи решаются с&nbsp;минимальными физическими усилиями, быстро и&nbsp;качественно. Наш интернет магазин предлагает широкий ассортимент продукции ведущих мировых производителей по&nbsp;доступным ценам. Розничные и&nbsp;оптовые покупатели смогут приобрести в&nbsp;Москве садовую технику и&nbsp;строительные инструменты для выполнения широкого спектра работ.
-			button Подробнее
-			h3 Ассортимент садовой техники
-			p В&nbsp;нашем интернет магазине в&nbsp;Москве можно купить:
-			ul
-				li оборудование для работы в&nbsp;саду&nbsp;&mdash; воздуходувки для уборки газона от&nbsp;листьев, газонокосилки, скарификаторы, высоторезы, кусторезы садовые, бензиновые триммеры, бензопилы и&nbsp;электропилы, бензиновые и&nbsp;аккумуляторные снегоуборщики, мотокультиваторы, мотобуры, дровоколы, подметальные машины для ухода за&nbsp;территорией, мойки высокого давления, мотопомпы
-				li строительный инструмент&nbsp;&mdash; дрели, рубанки, штроборезы, миксеры, шлифовальные машины, компрессоры, 
-				li садовый инвентарь&nbsp;&mdash; комбинированные системы, ручной инструмент, ранцевые опрыскиватели, лопаты, топоры, баки для воды, канистры, тачки, щетки, универсальные наборы инструментов
-				li системы водоснабжения&nbsp;&mdash; насосы и&nbsp;насосные станции, шланги, распылители, наконечники
-				li все для энергоснабжения&nbsp;&mdash; электрогенераторы, бесперебойники, бензиновые и&nbsp;дизельные генераторы, автоматика
-				li инверторные сварочные аппараты, электроды, все для сварки меттала и&nbsp;пластика
-				li средства защиты&nbsp;&mdash; перчатки, каски, очки
-				li запчасти, расходные материалы, насадки и&nbsp;масла, фильтры и&nbsp;смазки, колеса, ножи, леска и&nbsp;травосборник для бензокосы и&nbsp;другие комплектующие для реализуемой техники
-			p Вся садовая техника, представленная в&nbsp;интернет магазине, изготовлена компаниями с&nbsp;безупречной репутацией, которые работают на&nbsp;отечественном и&nbsp;мировом рынке много лет. Среди наиболее популярных брендов у&nbsp;нас представлены: echo, stiga, honda, bosch, huter, daewoo, makita
-			p Объединяет весь наш ассортимент надежность и&nbsp;отличная эргономика, соответствующая самым строгим современным требованиям. Широкий спектр товаров позволяет подобрать оборудование в&nbsp;оптимальном ценовом диапазоне. Техника будет соответствовать решаемым задачам по&nbsp;своей производительности. Предлагаем модели, укомплектованное надежными 2-х и&nbsp;4-х тактными двигателями, которое не&nbsp;требует высоких эксплуатационных затрат и&nbsp;привлечения к&nbsp;обслуживанию квалифицированных специалистов.
-			p Интернет магазин Техносадов: лучшая садовая техника
-			p В&nbsp;нашем интернет магазине покупателя ждет простой и&nbsp;информативный интерфейс, подробная информация о&nbsp;реализуемом товаре, скидки и&nbsp;акции, а&nbsp;так&nbsp;же распродажа уцененной техники. Это поможет подобрать наиболее востребованный вид оборудования или инвентаря. 
-			p Удобные формы оплаты и&nbsp;быстрая доставка в&nbsp;Москве и&nbsp;по&nbsp;России позволят воспользоваться лучшей садовой техникой в&nbsp;самые сжатые сроки. Максимальная гарантия и&nbsp;современный сервис распространяется на&nbsp;всю продукцию, а&nbsp;в&nbsp;случае поломки бензиновой или электрической техники, вы&nbsp;всегда можете обратиться за&nbsp;помощью к&nbsp;нашим специалистам из&nbsp;сервисного центра. 
-			p Приглашаем к&nbsp;выгодному сотрудничеству розничных и&nbsp;оптовых покупателей.
-				
-			.row
+			+e.hidden.hidden
+				h3 Ассортимент садовой техники
+				p В&nbsp;нашем интернет магазине в&nbsp;Москве можно купить:
+				ul
+					li оборудование для работы в&nbsp;саду&nbsp;&mdash; воздуходувки для уборки газона от&nbsp;листьев, газонокосилки, скарификаторы, высоторезы, кусторезы садовые, бензиновые триммеры, бензопилы и&nbsp;электропилы, бензиновые и&nbsp;аккумуляторные снегоуборщики, мотокультиваторы, мотобуры, дровоколы, подметальные машины для ухода за&nbsp;территорией, мойки высокого давления, мотопомпы
+					li строительный инструмент&nbsp;&mdash; дрели, рубанки, штроборезы, миксеры, шлифовальные машины, компрессоры, 
+					li садовый инвентарь&nbsp;&mdash; комбинированные системы, ручной инструмент, ранцевые опрыскиватели, лопаты, топоры, баки для воды, канистры, тачки, щетки, универсальные наборы инструментов
+					li системы водоснабжения&nbsp;&mdash; насосы и&nbsp;насосные станции, шланги, распылители, наконечники
+					li все для энергоснабжения&nbsp;&mdash; электрогенераторы, бесперебойники, бензиновые и&nbsp;дизельные генераторы, автоматика
+					li инверторные сварочные аппараты, электроды, все для сварки меттала и&nbsp;пластика
+					li средства защиты&nbsp;&mdash; перчатки, каски, очки
+					li запчасти, расходные материалы, насадки и&nbsp;масла, фильтры и&nbsp;смазки, колеса, ножи, леска и&nbsp;травосборник для бензокосы и&nbsp;другие комплектующие для реализуемой техники
+				p Вся садовая техника, представленная в&nbsp;интернет магазине, изготовлена компаниями с&nbsp;безупречной репутацией, которые работают на&nbsp;отечественном и&nbsp;мировом рынке много лет. Среди наиболее популярных брендов у&nbsp;нас представлены: echo, stiga, honda, bosch, huter, daewoo, makita
+				p Объединяет весь наш ассортимент надежность и&nbsp;отличная эргономика, соответствующая самым строгим современным требованиям. Широкий спектр товаров позволяет подобрать оборудование в&nbsp;оптимальном ценовом диапазоне. Техника будет соответствовать решаемым задачам по&nbsp;своей производительности. Предлагаем модели, укомплектованное надежными 2-х и&nbsp;4-х тактными двигателями, которое не&nbsp;требует высоких эксплуатационных затрат и&nbsp;привлечения к&nbsp;обслуживанию квалифицированных специалистов.
+				p Интернет магазин Техносадов: лучшая садовая техника
+				p В&nbsp;нашем интернет магазине покупателя ждет простой и&nbsp;информативный интерфейс, подробная информация о&nbsp;реализуемом товаре, скидки и&nbsp;акции, а&nbsp;так&nbsp;же распродажа уцененной техники. Это поможет подобрать наиболее востребованный вид оборудования или инвентаря. 
+				p Удобные формы оплаты и&nbsp;быстрая доставка в&nbsp;Москве и&nbsp;по&nbsp;России позволят воспользоваться лучшей садовой техникой в&nbsp;самые сжатые сроки. Максимальная гарантия и&nbsp;современный сервис распространяется на&nbsp;всю продукцию, а&nbsp;в&nbsp;случае поломки бензиновой или электрической техники, вы&nbsp;всегда можете обратиться за&nbsp;помощью к&nbsp;нашим специалистам из&nbsp;сервисного центра. 
+				p Приглашаем к&nbsp;выгодному сотрудничеству розничных и&nbsp;оптовых покупателей.
+			+e.btn.BUTTON Подробнее...
 	// end sAbout
