--- a/sourse/pug/blocks/sBrands/_sBrands.pug
+++ b/sourse/pug/blocks/sBrands/_sBrands.pug
@@ -5,7 +5,7 @@ mixin brandsItem(img)
 mixin sBrands(data)
 	// start sBrands
 	+b.SECTION.sBrands.section#sBrands&attributes(attributes)
-		.container
+		.container.sliderAutoWidthWrap
 			+b.section-title
 				.row
 					.col
