--- a/sourse/pug/blocks/sPopCategories/_sPopCategories.pug
+++ b/sourse/pug/blocks/sPopCategories/_sPopCategories.pug
@@ -1,5 +1,5 @@
 mixin popCatItem(title,img)
-	.col-auto
+	.col-6.col-sm-4.col-md-3.col-lg-2
 		+e.item
 			+e(href='#').item-title.stretched-link!= title
 			+img(`img/pop-item-${img}.jpg`)
