--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -3,6 +3,11 @@
 	// 
 	background-color: $body-color;
 	color: $white;
+
+	.menu-item {
+		font-weight: 700;
+		
+	}
 	
 	@include media-breakpoint-up(xl) {
 	}
