--- a/sourse/pug/blocks/sBlogPreview/_sBlogPreview.scss
+++ b/sourse/pug/blocks/sBlogPreview/_sBlogPreview.scss
@@ -14,6 +14,10 @@
 		}
 	}
 
+	.row {
+		--bs-gutter-y: #{$grid-gutter-width}
+	}
+
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
@@ -53,51 +57,56 @@
 		border-top: 1px solid #dddddd;
 	}
 	&--lg {
-		padding: rem(30);
-		height: 405px;
-		justify-content: center;
-		&::after {
-			content: '';
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100%;
-			height: 100%;
-			background: rgba(68, 68, 68, 0.3);
-		}
-		&:hover {
-			box-shadow: 0 0 1rem rgb(68 68 68 / 50%);
-			img {
-				filter: blur(3px);
+		@include media-breakpoint-up(xl) {
+			padding: rem(30);
+			height: 405px;
+			justify-content: center;
+			&::after {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: rgba(68, 68, 68, 0.3);
 			}
-			// .blog-item__caption {
-			// 	text-decoration: none;
-			// }
-		}
-		img {
-			position: absolute;
-			top: 0;
-			left: 0;
-			right: 0;
-			bottom: 0;
-			width: 100%;
-			height: auto;
-		}
-		.blog-item__caption {
-			text-decoration: none;
-			font-size: rem(40);
-			font-weight: 700;
-			color: $white;
-			z-index: 1;
 			&:hover {
+				box-shadow: 0 0 1rem rgb(68 68 68 / 50%);
+				img {
+					filter: blur(3px);
+				}
+				// .blog-item__caption {
+				// 	text-decoration: none;
+				// }
+			}
+			img {
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: bottom right;
+			}
+			.blog-item__caption {
 				text-decoration: none;
+				font-size: rem(40);
+				font-weight: 700;
+				color: $white;
+				z-index: 1;
+				&:hover {
+					text-decoration: none;
+				}
+			}
+			.blog-item__date {
+				align-self: flex-start;
+				margin-top: 0;
+				color: $white;
+				z-index: 1;
 			}
 		}
-		.blog-item__date {
-			align-self: flex-start;
-			margin-top: 0;
-			color: $white;
-			z-index: 1;
+
 		}
-	}
 }
