--- a/sourse/pug/blocks/sPopCategories/_sPopCategories.scss
+++ b/sourse/pug/blocks/sPopCategories/_sPopCategories.scss
@@ -13,21 +13,42 @@
 			padding: 10px;
 			background-color: $white;
 			text-align: center;
-			width: 250px;
+			max-width: 100%;
+			@include media-breakpoint-down(xl) {
+				&::after {
+					content: '';
+					position: absolute;
+					width: 100%;
+					height: 100%;
+					top: 0;
+					left: 0;
+					background-color: rgba(68, 68, 68, 0.5);
+				}
+			}
 			&:hover {
 				box-shadow: 0 0 1rem #bbb;
 			}
 		}
 		&__item-title {
-			font-size: 18px;
+			font-size: rem(18);
 			font-weight: bold;
 			color: $body-color;
 			&:hover {
 				color: $body-color;
 			}
+			@include media-breakpoint-down(xl) {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+				font-size: 14px;
+				color: $white;
+				z-index: 5;
+			}
 		}
 		img {
-			max-width: 100%;
+			position: relative;
+			width: 100%;
 		}
 
 	@include media-breakpoint-up(xl) {}
