--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -35,6 +35,10 @@
 	font-size:math.div(27,10)*1rem;
 	width: math.div(27,27)*1em;
 }
+.icon-checked {
+	font-size:math.div(16,10)*1rem;
+	width: math.div(20,16)*1em;
+}
 .icon-compare {
 	font-size:math.div(31,10)*1rem;
 	width: math.div(31,31)*1em;
@@ -62,6 +66,10 @@
 .icon-login {
 	font-size:math.div(31,10)*1rem;
 	width: math.div(31,31)*1em;
+}
+.icon-ok {
+	font-size:math.div(31,10)*1rem;
+	width: math.div(20,31)*1em;
 }
 .icon-oneclick {
 	font-size:math.div(31,10)*1rem;
@@ -92,10 +100,14 @@
 	width: math.div(16,16)*1em;
 }
 .icon-vk {
-	font-size:math.div(24,10)*1rem;
-	width: math.div(24,24)*1em;
+	font-size:math.div(18,10)*1rem;
+	width: math.div(30,18)*1em;
 }
 .icon-whatsapp {
-	font-size:math.div(16,10)*1rem;
-	width: math.div(16,16)*1em;
+	font-size:math.div(30,10)*1rem;
+	width: math.div(30,30)*1em;
+}
+.icon-youtube {
+	font-size:math.div(21,10)*1rem;
+	width: math.div(30,21)*1em;
 }
