--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -239,7 +239,7 @@ $utilities-bg-colors: map-loop($utilities-colors, rgba-css-var, "$key", "bg") !d
 $link-color: $white !default;
 $link-decoration: none !default;
 $link-shade-percentage: 20% !default;
-$link-hover-color: shift-color($link-color, $link-shade-percentage) !default;
+$link-hover-color: initial !default;
 $link-hover-decoration: null !default;
 
 $stretched-link-pseudo-element: after !default;
