--- a/sourse/pug/blocks/sHit/_sHit.scss
+++ b/sourse/pug/blocks/sHit/_sHit.scss
@@ -39,7 +39,7 @@
 } // end.sHit
 
 .product-card {
-	display: inline-block;	
+	display: block;	
 	background-color: $white;
 	border: 1px solid $gray;
 	overflow: hidden;
