--- a/sourse/pug/pages/02-catalog.pug
+++ b/sourse/pug/pages/02-catalog.pug
@@ -11,6 +11,7 @@ include ../blocks/sHit/_sHit.pug
 include ../blocks/sCatalogHead/_sCatalogHead.pug
 include ../blocks/sFilter/_sFilter.pug
 include ../blocks/sCatalogBody/_sCatalogBody.pug
+include ../blocks/sProductDesc/_sProductDesc.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
@@ -39,6 +40,8 @@ block pagecontent
 				+sFilter()
 			.col
 				+sCatalogBody()
+	+sProductDesc
+	+sMainCategories
 	+footer()
       
 
