--- a/sourse/sass/_sprite.scss
+++ b/sourse/sass/_sprite.scss
@@ -43,6 +43,18 @@
 	font-size:math.div(31,10)*1rem;
 	width: math.div(31,31)*1em;
 }
+.icon-ddgroup-icon-1 {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(24,24)*1em;
+}
+.icon-ddgroup-icon-2 {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(19,24)*1em;
+}
+.icon-ddgroup-icon-3 {
+	font-size:math.div(24,10)*1rem;
+	width: math.div(26,24)*1em;
+}
 .icon-fastview {
 	font-size:math.div(40,10)*1rem;
 	width: math.div(40,40)*1em;
