--- a/sourse/pug/blocks/sCatalogBody/_sCatalogBody.scss
+++ b/sourse/pug/blocks/sCatalogBody/_sCatalogBody.scss
@@ -5,6 +5,38 @@
 	// --sTPB: ;
 	&__row {
 		--bs-gutter-y: #{rem(10)};
+		margin-bottom: rem(30);
+		justify-content: center;
+	}
+	.pagination-wrapper {
+		ul {
+			justify-content: center;
+			gap: rem(10);
+			margin-bottom: rem(10);
+			li {
+				.page-numbers {
+					color: $body-color;
+					&:hover {
+						background-color: rgba(0, 159, 228, 0.1);
+						border-color: $gray-300;
+					}
+					&.prev {
+						width: rem(40);
+						height: rem(40);
+						display: flex;
+						align-items: center;
+						justify-content: center;
+					}
+				}
+				a, .page-numbers.current {
+					width: rem(40);
+					height: rem(40);
+					display: flex;
+					align-items: center;
+					justify-content: center;
+				}
+			}
+		}
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
