--- a/sourse/pug/blocks/sCatalogHead/_sCatalogHead.pug
+++ b/sourse/pug/blocks/sCatalogHead/_sCatalogHead.pug
@@ -2,13 +2,16 @@ mixin sCatalogHead(data)
 	// start sCatalogHead
 	+b.sCatalogHead#sCatalogHead&attributes(attributes)
 		+e.row.row
-			.col-auto
+			.col-lg-auto
 				button.btn.filter-btn
 					+icon('settings')
 					| Подбор по параметрам
 			.col
 				+b.select-group
-					+select('', 'Сортировать', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
-					+select('', 'Сортировать', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
-					+select('', 'Сортировать', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
+					+e.wrap
+						+select('', 'Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
+					+e.wrap
+						+select('', 'Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
+					+e.wrap
+						+select('', 'Сортировать:', 'Наименованию', 'Популярности', 'Отзывам', 'Рейтингу', 'Цена по возрастанию', 'Цена по убыванию')
 	// end sCatalogHead
