--- a/sourse/pug/blocks/sCatalogHead/_sCatalogHead.scss
+++ b/sourse/pug/blocks/sCatalogHead/_sCatalogHead.scss
@@ -12,6 +12,9 @@
 		@include media-breakpoint-up(lg) {
 			pointer-events: none;
 		}
+		@include media-breakpoint-down(lg) {
+			width: 100%;
+		}
 		.icon {
 			font-size: rem(24);
 			margin-right: rem(10);
@@ -19,6 +22,7 @@
 	}
 	&__row {
 		margin-bottom: rem(15);
+		--bs-gutter-y: #{rem(10)};
 	}
 	.select-group {
 		padding: rem(10);
@@ -26,6 +30,37 @@
 		border: 1px solid $gray;
 		display: flex;
 		justify-content: space-between;
+		@include media-breakpoint-down(lg) {
+			flex-wrap: wrap;
+			justify-content: center;
+		}
+		&__input {
+			background-color: transparent;
+			border: none;
+			cursor: pointer;
+		}
+		&__wrap {
+			position: relative;
+			&::after {
+				content: '';
+				position: absolute;
+				display: block;
+				clip-path: polygon(50% 100%, 0 50%, 100% 50%);
+				background-color: $body-color;
+				width: rem(11);
+				height: rem(11);
+				right: 0;
+				top: 50%;
+				transform: translateY(-63%);
+			}
+		}
+		select {
+			font-weight: 700;
+			color: $blue;
+			option {
+				color: $body-color;
+			}
+		}
 	}
 	@include media-breakpoint-up(xl) {}
 	@include media-breakpoint-up(lg) {}
