--- a/sourse/pug/blocks/sFilter/_sFilter.scss
+++ b/sourse/pug/blocks/sFilter/_sFilter.scss
@@ -3,10 +3,28 @@
 	// --sPT: ;
 	// --sPB: ;
 	// --sTPB: ;
+	@include mt;
 	background-color: $white;
 	padding: rem(10);
 	border: 1px solid $gray;
 	width: 240px;
+	@include media-breakpoint-down(lg) {
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		z-index: 2100;
+		top: 0;
+		left: 0;
+		transform: translateX(-100%);
+	}
+	&.active {
+		transform: translateX(0);
+		.sFilter__headline {
+			&::after {
+				content: '';
+			}
+		}
+	}
 	.dd-group {
 		&__item {
 			&.active {
@@ -14,8 +32,29 @@
 					transform: translateY(14%) rotate(180deg);
 				}
 			}
+			&:not(:last-child) {
+				.dd-group__content {
+					padding-bottom: rem(10);
+					border-bottom: 1px solid $gray;
+					// margin-bottom: rem(10);
+				}
+			}
+			&:not(:first-child) {
+				padding-top: rem(10);
+			}
+			&--scroll {
+				.dd-group__content {
+					position: relative;
+					overflow: auto;
+					margin-top: rem(10);
+				}
+			}
+		}
+		&__wrap {
+			max-height: rem(300);
 		}
 		&__head {
+			cursor: pointer;
 			border-bottom: 1px solid $gray;
 			padding-bottom: rem(10);
 			font-weight: 700;
@@ -65,6 +104,57 @@
 			}
 		}
 		&-bar {
+			background-color: $red;
+		}
+	}
+	&__headline {
+		display: flex;
+		justify-content: space-between;
+		position: relative;
+		margin-bottom: 10px;
+		@include media-breakpoint-up(lg) {
+			display: none;
+		}
+		&:after {
+			content: unset;
+			position: absolute;
+			display: block;
+			width: 200vw;
+			height: 1px;
+			background-color: $gray;
+			bottom: 0;
+			left: -100vw;
+		}
+	}
+	&__close {
+		width: 20px;
+		height: 20px;
+		background-color: $body-color;
+		cursor: pointer;
+		clip-path: polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%);
+	}
+	.custom-input {
+		padding-left: rem(30);
+		display: flex;
+		align-items: center;
+		margin-bottom: rem(5);
+		&__input {
+			width: rem(28);
+			height: rem(28);
+			margin-left: rem(-30);
+		}
+		&__text {
+			margin-left: rem(10);
+		}
+	}
+	.btn-submit {
+		padding: rem(10);
+		width: 100%;
+		background-color: $body-color;
+		margin-top: rem(10);
+		color: $white;
+		font-weight: 700;
+		&:hover {
 			background-color: $red;
 		}
 	}
