--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -46,7 +46,7 @@ $output-bourbon-deprecation-warnings: false;
 // @import "./node_modules/bootstrap/scss/card";
 // @import "./node_modules/bootstrap/scss/accordion";
 @import "./node_modules/bootstrap/scss/breadcrumb";
-// @import "./node_modules/bootstrap/scss/pagination";
+@import "./node_modules/bootstrap/scss/pagination";
 // @import "./node_modules/bootstrap/scss/badge";
 // @import "./node_modules/bootstrap/scss/alert";
 // @import "./node_modules/bootstrap/scss/progress";
@@ -80,24 +80,25 @@ $output-bourbon-deprecation-warnings: false;
 }
 // @import "./node_modules/bootstrap/scss/pagination";
 
-// .pagination-wrapper ul {
-// 	@extend .pagination;
-// }
+.pagination-wrapper ul {
+	@extend .pagination;
+}
 
-// .pagination-wrapper li .page-numbers {
-// 	@extend .page-link;
-// }
+.pagination-wrapper li .page-numbers {
+	@extend .page-link;
+}
 
-// .pagination-wrapper li {
-// 	@extend .page-item;
+.pagination-wrapper li {
+	@extend .page-item;
 
-// 	.current {
-// 		z-index: 1;
-// 		// color: $pagination-active-color;
-// 		// background-color: $pagination-active-bg;
-// 		// border-color: $pagination-active-border-color;
-// 	}
-// }
+	.current {
+		z-index: 1;
+		pointer-events: none;
+		color: $white !important;
+		background-color: $pagination-active-bg;
+		border-color: $pagination-active-border-color;
+	}
+}
 @import "root";
 @import "base";
 
@@ -122,6 +123,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sFilter/_sFilter.scss';
 @import '../pug/blocks/sCatalogBody/_sCatalogBody.scss';
 @import '../pug/blocks/sCommunications/_sCommunications.scss';
+@import '../pug/blocks/sProductDesc/_sProductDesc.scss';
 
 
 @import '../pug/blocks/header/_header.scss';
