--- a/sourse/pug/pages/02-catalog.pug
+++ b/sourse/pug/pages/02-catalog.pug
@@ -12,6 +12,7 @@ include ../blocks/sCatalogHead/_sCatalogHead.pug
 include ../blocks/sFilter/_sFilter.pug
 include ../blocks/sCatalogBody/_sCatalogBody.pug
 include ../blocks/sProductDesc/_sProductDesc.pug
+include ../blocks/sAllCategories/_sAllCategories.pug
  
 include ../blocks/sContact/_sContact.pug
 include ../blocks/sForm/_sForm.pug
@@ -42,6 +43,7 @@ block pagecontent
 				+sCatalogBody()
 	+sProductDesc
 	+sMainCategories
+	+sAllCategories
 	+footer()
       
 
