--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -123,6 +123,7 @@ $output-bourbon-deprecation-warnings: false;
 @import '../pug/blocks/sFilter/_sFilter.scss';
 @import '../pug/blocks/sCatalogBody/_sCatalogBody.scss';
 @import '../pug/blocks/sCommunications/_sCommunications.scss';
+@import '../pug/blocks/sService/_sService.scss';
 
 
 @import '../pug/blocks/header/_header.scss';
