--- a/sourse/pug/blocks/sService/_sService.pug
+++ b/sourse/pug/blocks/sService/_sService.pug
@@ -28,5 +28,72 @@ mixin sService2(data)
 				td Замена свечи зажигания
 				td 150
 			tr
-				td
-				td
+				td Замена воздушного фильтра
+				td 150
+			tr
+				td Замена масла в двигателе
+				td 500
+			tr
+				td Регулировка карбюратора
+				td 250
+			tr
+				td Ремонт / очистка карбюратора в УЗВ
+				td 2000
+			tr
+				td Ремонт стартера
+				td 750
+			tr
+				td Регулировка зазора катушки зажигания
+				td 500
+			tr
+				td Замена катушки зажигания
+				td 500
+			tr
+				td Регулировка клапанов
+				td 1750
+
+mixin sService3(data)
+	// start sService
+	+b.sService#sService&attributes(attributes)
+		p Неработоспособность бензопилы может быть вызвана различными факторами. Поэтому мы&nbsp;проводим полную диагностику всех узлов бензопилы, составляем список предстоящих работ для устранения поломок, согласуем с&nbsp;заказчиком перечень работ, срок выполнения и&nbsp;стоимость. После проведения ремонта все демонтированные детали выдаются клиенту вместе с&nbsp;отремонтированной техникой.
+		p <strong>Ориентировочная стоимость основных работ</strong>
+		table
+			tr
+				th Виды работ
+				th Стоимость, руб.
+			tr
+				td Регулировка карбюратора (2 кат. сложности)
+				td 400
+			tr
+				td Замена топливного фильтра (1 кат. сложности)
+				td 200
+			tr
+				td Замена свечи зажигания
+				td 150
+			tr
+				td Замена стартера (5 кат. сложности)
+				td 870
+			tr
+				td Ремонт крепления натяжителя цепи
+				td 550
+			tr
+				td Замена сцепления
+				td 700
+			tr
+				td Замена топливного бака
+				td 300
+			tr
+				td Ремонт механизма цепи
+				td 500
+			tr
+				td Регулировка оборотов (2 кат.сложности)
+				td 400
+			tr
+				td Заточка цепи (6)
+				td 300
+			tr
+				td Регулировка насоса подачи масла
+				td 650
+			tr
+				td Чистка выхлопной системы
+				td 1000
