--- a/sourse/pug/blocks/sService/_sService.scss
+++ b/sourse/pug/blocks/sService/_sService.scss
@@ -8,10 +8,26 @@
 	}
 	table {
 		width: 100%;
+		font-size: 14px;
+		font-weight: 500;
+	}
+	tr{
+		&:hover{
+			td{
+				background-color: #eeeeee;
+			}
+		}
 	}
 	th {
 		border-bottom: 1px solid #bbbbbb;
+		padding: rem(8);
 		padding-bottom: rem(10);
+	}
+	td{
+		padding: rem(8);
+		width: 50%;
+		background-color: $white;
+		transition-duration: 0.3s;
 	}
 	@include media-breakpoint-up(xl) {
 	}
